--- a/app/ludo/src/app.css
+++ b/app/ludo/src/app.css
@@ -1,1 +1,11 @@
 @import '@sgk/ui/global.css';
+
+@utility trapeze-* {
+	aspect-ratio: 3/2;
+	clip-path: polygon(
+		calc((--value(ratio)) * 100%) 0,
+		calc(100% - ((--value(ratio)) * 100%)) 0,
+		100% 100%,
+		0 100%
+	);
+}
